crates/voom-dsl/src/snapshots/voom_dsl__formatter__tests__formats_on_error_quarantine.snap
---
source: crates/voom-dsl/src/formatter.rs
assertion_line: 1256
expression: formatted
---
policy "p" {
  config {
    on_error: quarantine
  }

  phase v {
    verify quick
  }
}
