crates/voom-dsl/src/snapshots/voom_dsl__formatter__tests__formats_verify_op.snap
---
source: crates/voom-dsl/src/formatter.rs
assertion_line: 1241
expression: formatted
---
policy "p" {
  phase v {
    verify thorough
  }
}
